primer intento de dar instrucciones